--- a/release_html/daohang_iphone_releases.html
+++ b/release_html/daohang_iphone_releases.html
@@ -31,15 +31,15 @@
                     </a>
                     <button class="btn" id="share">分享应用</button>
                 </div>
-                <div class="guide-time">地址更新时间：2023-06-03 06:13:24</div>
+                <div class="guide-time">地址更新时间：2023-06-03 06:25:23</div>
                 <div class="tips"><span>提示: 部分网站可能需要VPN翻墙后访问，寻找能长期提供草榴邀请码/98邀请码/91邀请码的朋友合作：1024huijia@gmail.com</span></div>
             </div>
           </div><div class="tabBox">
                 <h3 class="tabTitle">热门推荐</h3>
                 <div class="aBox" >
-                  <a href="https://cl.1562x.xyz/index.php" class="alink" target="_blank">1024草榴1</a>
-<a href="https://cl.1562y.xyz/index.php" class="alink" target="_blank">1024草榴2</a>
-<a href="https://cl.1562z.xyz/index.php" class="alink" target="_blank">1024草榴3</a>
+                  <a href="https://cl.9730x.xyz/index.php" class="alink" target="_blank">1024草榴1</a>
+<a href="https://cl.9730y.xyz/index.php" class="alink" target="_blank">1024草榴2</a>
+<a href="https://cl.9730z.xyz/index.php" class="alink" target="_blank">1024草榴3</a>
 <a href="https://f0427.9p234.com/index.php" class="alink" target="_blank">91Pr视频1</a>
 <a href="https://91zuixindizhi2.com" class="alink" target="_blank">91Pr视频2</a>
 <a href="https://91p263.com" class="alink" target="_blank">91Pr视频3</a>
@@ -51,9 +51,9 @@
 <a href="https://h5.zztt72.com/" class="alink" target="_blank">黑料B打烊2</a>
 <a href="https://zztt4.com/" class="alink" target="_blank">黑料B打烊3</a>
 <a href="https://4555.fun/" class="alink" target="_blank">黑料论坛1</a>
-<a href="https://www.busfan.cfd" class="alink" target="_blank">JavBus网1</a>
-<a href="https://www.javbus.lol" class="alink" target="_blank">JavBus网2</a>
-<a href="https://www.dmmbus.lol" class="alink" target="_blank">JavBus网3</a>
+<a href="https://www.javbus.lol" class="alink" target="_blank">JavBus网1</a>
+<a href="https://www.dmmsee.cfd" class="alink" target="_blank">JavBus网2</a>
+<a href="https://www.cdnbus.lol" class="alink" target="_blank">JavBus网3</a>
 <a href="https://bd.sparklen.com/" class="alink" target="_blank">2048地址1</a>
 <a href="https://123456789.nn518.com/w33.php" class="alink" target="_blank">2048地址2</a>
 <a href="https://123456789.wl088.com/w34.php" class="alink" target="_blank">2048地址3</a>
